--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node Index.js"
+    "start": "node index",
+    "dev": "nodemon index"
   },
   "author": "faiz khan",
   "license": "ISC",
